2007-10-02  Kevin Decker  <kdecker@apple.com>

        Reviewed by John Sullivan.

        <rdar://problem/5517710> 

        * WebView/WebView.mm: Removed -[WebView _minimumRequiredSafariBuildNumber] because newer
         versions of Safari no longer use this method. This won't break existing Safaris because
         they always use a respondsToSelector check before calling this.
         
        * WebView/WebViewPrivate.h: Ditto. 

2007-10-01  Eric Seidel  <eric@webkit.org>

        Reviewed by Oliver Hunt.
        
        SVG Subresources will not be saved when creating WebArchives
        http://bugs.webkit.org/show_bug.cgi?id=15280
        
        Implement _subresourceURLs methods for more SVGElement types
        more such methods will be needed as we add support for other
        external references (such as use, mpath, tref, etc.)

        * DOM/WebDOMOperations.mm:
        (-[DOMSVGScriptElement _subresourceURLs]): added.
        (-[DOMSVGCursorElement _subresourceURLs]): added.
        (-[DOMSVGFEImageElement _subresourceURLs]): added.

2007-10-01  Eric Seidel  <eric@webkit.org>

        Reviewed by Oliver Hunt.
        
        WebArchives do not embed stylesheets referenced by xml-stylesheeet
        http://bugs.webkit.org/show_bug.cgi?id=15320

        * DOM/WebDOMOperations.mm:
        (-[DOMProcessingInstruction _stylesheetURL]): needed to access [[self sheet] href]
        (-[DOMProcessingInstruction _subresourceURLs]): call and return _stylesheetURL

2007-10-01  Eric Seidel  <eric@webkit.org>

        Reviewed by Oliver Hunt.

        * DOM/WebDOMOperations.mm: added DOMSVGElementImage _subresources implementation
        (-[DOMNode _URLsFromSelectors:]): now handles DOMSVGAnimatedString return values
        (-[DOMSVGImageElement _subresourceURLs]): added.
        * MigrateHeaders.make: copies DOMSVG* headers into WebKit/PrivateHeaders

2007-10-01  Oliver Hunt  <oliver@apple.com>

        Reviewed by Mark.
